# justagame

./: .gitignore  CMakeLists.txt  Makefile
assets/: Cube.png~  card.blend  card.blend1  plane.blend  plane.blend1  sphere.mtl
assets/bank/: bank.gltf
assets/card/: card.blend  card.blend1  card.mtl
assets/nuclearplant/: nuclearplant.blend  nuclearplant.blend1
assets/tile/: tile.blend  tile.blend1  tile.mtl
assets/windturbine/: windturbine.blend  windturbine.blend1  windturbine.gltf
cardgen/: card.h  cardgen.cpp  cardgen.h  main.cpp
cardgen/assets/: card_a.json  card_b.json  ui.json
cardgen/assets/cards/: createcard.sh
cardgen/assets/cards/bp_bank/: bp_bank.txt
cardgen/assets/cards/bp_business/: bp_business.txt
cardgen/assets/cards/bp_corporation/: bp_corporation.txt
cardgen/assets/cards/bp_hydroplant/: bp_hydroplant.txt
cardgen/assets/cards/bp_militarybase/: bp_militarybase.txt
cardgen/assets/cards/bp_oilplatform/: bp_oilplatform.txt
cardgen/assets/cards/bp_oilwell/: bp_oilwell.txt
include/: app.h  assetfactory.h  cardobject.h  cards.h  client.h  clientcontroller.h  event.h  game.h  goptions.h  hand.h  ievent.h  ihand.h  io.h  pipeline.h  player.h  scheduler.h  testcontroller.h  tile.h
notes/: Cards.md
shaders/: card.vert  cubemap.frag  lights.glsl  msaa.frag  object.frag  object.vert  offscreen.frag  offscreeninst.frag  pbr.frag  pbrbasecolor.frag  pbrpolyhaven.frag  screenshader.frag  tiles.frag  tiles.vert
src/: app.cpp  assetfactory.cpp  cardobject.cpp  client.cpp  game.cpp  goptions.cpp  ievent.cpp  pipeline.cpp  tile.cpp
test/: Makefile  testclient.h  testgame.cpp  testio.cpp
(+10 files in other folders)
